<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <TextView
        android:id="@+id/textView_hoten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="66dp"
        android:text="@string/ho_ten"
        android:textColor="#0000FF"
        
         />

    <EditText
        android:id="@+id/editText_hoten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_hoten"
        android:layout_alignBottom="@+id/textView_hoten"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/textView_hoten"
        android:ems="10"
        android:hint="@string/hint"
        android:singleLine="true" 
        >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/spinner_namsinh"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/editText_hoten"
        android:layout_alignTop="@+id/textView_namsinh"
        
         />

    <TextView
        android:id="@+id/textView_namsinh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_hoten"
        android:layout_alignRight="@+id/textView_hoten"
        android:layout_marginTop="30dp"
        
        android:text="@string/nam_sinh"
        android:textColor="#0000FF" />

   
    <TextView
        android:id="@+id/textView_gioitinh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView_hoten"
        android:layout_below="@+id/textView_namsinh"
        android:layout_marginTop="30dp"
        android:text="@string/gioi_tinh"
        android:textColor="#0000FF"
        android:layout_alignTop="@+id/group_gioitinh" 
        />

    <RadioGroup
        android:id="@+id/group_gioitinh"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/spinner_namsinh"
	    android:layout_alignLeft="@+id/spinner_namsinh"
	    android:layout_marginTop="30dp">
        
	     
        <RadioButton
	        android:id="@+id/radioButton1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/nam"
	        android:checked="true"
	         />

 	   <RadioButton
	        android:id="@+id/radioButton2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/nu" />        
        
    </RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_gioitinh"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        
        android:text="@string/luu_tru" />

</RelativeLayout>